--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -445,8 +445,8 @@ include components/modals/_sponsorship-plan.pug
                         th#card07_table_label_column02
                         th#card07_table_label_column03
                         th#card07_table_label_column04
-                    tbody
-                      tr
+                    tbody#sponsorshipPlanTable
+                      //tr
                         td.text-center
                           a.text-bold-600(href='#') Diamante
                         td
