--- a/static/local/ext/pug/components/modals/_sponsorship.pug
+++ b/static/local/ext/pug/components/modals/_sponsorship.pug
@@ -52,7 +52,36 @@
                         input.form-control.input-sm.m-0.p-0.mt-1#sponsorship_modal_data_price(type="number")
                         p.text-left
                             small.text-muted#activity_register_label_price-helper
-                   
+
+                    fieldset.form-group.form-group-style
+                        label#sponsorship_modal_label_social-networks.m-0
+                        br
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-facebook
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-facebook(type="text")
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-twitter
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-twitter(type="text")
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-instagram
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-instagram(type="text")
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-lattes
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-lattes(type="text")
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-github
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-github(type="text")
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-youtube
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-youtube(type="text")
+                        
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-linkedin
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-linkedin(type="text")
+                        
+                        small.text-muted
+                            i#sponsorship_modal_label_social-network-pinterest
+                        input.form-control.input-sm.m-0.p-0#sponsorship_modal_data_social-network-pinterest(type="text")
 
                     fieldset.form-group.form-group-style.border-light
                         label#sponsorship_modal_label_avatar.m-0
